merge from product-service-redis-cache-branch