@@ -9,10 +9,14 @@ import com.vicky.product_service.Repository.CategoryRepository;
 import com.vicky.product_service.Repository.ProductRepository;
 import com.vicky.product_service.Service.CategoryService;
 import jakarta.transaction.Transactional;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.CachePut;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -27,14 +31,16 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
+    @Cacheable(value = "categories", key = "'all'")
     public List<CategoryResponseDto> getCategories() {
         List<CategoryEntity> list = categoryRepository.findAll();
         return list.stream()
                 .map(categoryEntity -> CategoryMapper.toDto(categoryEntity))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @CacheEvict(value = "categories", allEntries = true)
     public CategoryResponseDto createCategory(CategoryRequestDto categoryRequestDto) {
         CategoryEntity categoryEntity = CategoryMapper.toEntity(categoryRequestDto);
         categoryEntity.setCreatedAt(LocalDateTime.now());
@@ -44,6 +50,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Transactional
     @Override
+    @CacheEvict(value = "categories", allEntries = true)
     public void deleteCategory(long id) {
         CategoryEntity categoryEntity = categoryRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("category id not found"));
@@ -53,6 +60,7 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
+    @CacheEvict(value = "categories", allEntries = true)
     public CategoryResponseDto updateCategory(long id, CategoryRequestDto categoryRequestDto) {
         CategoryEntity categoryEntity = categoryRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("category not found"));
